rm old swagger fix, rm redundant dependencies, add comments